[gd_scene load_steps=24 format=3 uid="uid://bx60ih8pgiaw7"]

[ext_resource type="Texture2D" uid="uid://brq8jxuvifk0t" path="res://real-pixels-artwork(6).png" id="2_3owt7"]
[ext_resource type="Script" path="res://TextureButton3.cs" id="2_h6dge"]
[ext_resource type="Texture2D" uid="uid://c66bf1ef7joii" path="res://Untitled255_20240214213649.webp" id="2_k8ff8"]
[ext_resource type="Texture2D" uid="uid://bscvj0k0nnayl" path="res://Untitled259_20240215233123.png" id="3_0wn2u"]
[ext_resource type="Script" path="res://TextureButton1.gd" id="3_2axvj"]
[ext_resource type="Script" path="res://TextureButton4.cs" id="4_co05e"]
[ext_resource type="Texture2D" uid="uid://ctv83tllc6p1i" path="res://Untitled255_20240215170303.png" id="4_suhqg"]
[ext_resource type="Texture2D" uid="uid://07h43ie5kwa" path="res://Untitled255_20240215180024.png" id="6_02gk7"]
[ext_resource type="Texture2D" uid="uid://2y27433a2bb8" path="res://Untitled264_20240215233344.png" id="6_io81j"]
[ext_resource type="Script" path="res://Camera3Dsignal.gd" id="7_c4g4y"]
[ext_resource type="Script" path="res://Camera3D2.gd" id="8_5156q"]
[ext_resource type="Script" path="res://Panel1.gd" id="8_b04yo"]
[ext_resource type="Script" path="res://DialogueManager.gd" id="10_civ2p"]
[ext_resource type="Script" path="res://Camera3D3.cs" id="10_p4fll"]
[ext_resource type="Script" path="res://Button1.gd" id="13_e5g4p"]
[ext_resource type="Script" path="res://Obutton.gd" id="13_r2q86"]
[ext_resource type="PackedScene" uid="uid://ch7uhlvry11b3" path="res://textures/hbuild2.glb" id="14_h1aqy"]
[ext_resource type="Script" path="res://Nodeb.gd" id="14_xnxjj"]
[ext_resource type="Script" path="res://TextureButton4.gd" id="16_38707"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sphtl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_s7m45"]
sky_material = SubResource("ProceduralSkyMaterial_sphtl")

[sub_resource type="Environment" id="Environment_pr0wb"]
background_mode = 2
sky = SubResource("Sky_s7m45")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_l2706"]

[node name="Node2D" type="Node2D"]
script = ExtResource("10_civ2p")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pr0wb")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 502.0
offset_top = 254.0
offset_right = 971.0
offset_bottom = 500.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("2_k8ff8")
texture_hover = ExtResource("3_0wn2u")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_2axvj")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 502.0
offset_top = 340.0
offset_right = 971.0
offset_bottom = 586.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("4_suhqg")
texture_hover = ExtResource("6_io81j")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("4_co05e")

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 502.0
offset_top = 428.0
offset_right = 971.0
offset_bottom = 677.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("6_02gk7")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_h6dge")

[node name="Node3D" type="Node3D" parent="."]
top_level = true

[node name="Camera3D" type="Camera3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 0.975223, -0.221225, 0, 0.221225, 0.975223, 0, 0, 0)
current = true
script = ExtResource("7_c4g4y")

[node name="Camera3D2" type="Camera3D" parent="Node3D"]
transform = Transform3D(-0.366371, 0, -0.930469, 0, 1, 0, 0.930469, 0, -0.366371, 0.741907, 8.83691, 0)
script = ExtResource("8_5156q")

[node name="Camera3D3" type="Camera3D" parent="Node3D"]
script = ExtResource("10_p4fll")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 1
z_as_relative = false
material = SubResource("CanvasItemMaterial_l2706")
position = Vector2(576, 324)

[node name="Panel" type="Panel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 330.0
offset_top = 52.0
offset_right = 819.0
offset_bottom = 693.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_b04yo")

[node name="ExitPrompt" type="Label" parent="."]
visible = false
y_sort_enabled = true
offset_left = 435.0
offset_top = 214.0
offset_right = 686.0
offset_bottom = 237.0
text = "Exit? Click y/n on your keyboard."
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(564, 599)

[node name="RichTextLabel" type="RichTextLabel" parent="Sprite2D"]
texture_repeat = 1
offset_left = -439.0
offset_top = -70.0
offset_right = 486.0
offset_bottom = 93.0
bbcode_enabled = true
text = "[size=80]"

[node name="Panel" type="Panel" parent="Sprite2D/RichTextLabel"]
layout_mode = 0
offset_left = -13.0
offset_top = -27.0
offset_right = 1495.0
offset_bottom = 376.0

[node name="Obutton" type="Node" parent="."]
script = ExtResource("13_r2q86")

[node name="Button" type="Button" parent="."]
offset_left = 415.0
offset_top = 121.0
offset_right = 423.0
offset_bottom = 272.0
script = ExtResource("13_e5g4p")

[node name="Node" type="Node" parent="."]
script = ExtResource("14_xnxjj")

[node name="hbuild2" parent="." instance=ExtResource("14_h1aqy")]
transform = Transform3D(-0.945035, 0, -0.326971, 0, 1, 0, 0.326971, 0, -0.945035, 16.585, 2.30084, -8.36826)

[node name="hbuild3" parent="." instance=ExtResource("14_h1aqy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -15.8606, 0, -6.35243)

[node name="TextureButton4" type="TextureButton" parent="."]
offset_right = 115.0
offset_bottom = 51.0
texture_normal = ExtResource("2_3owt7")
script = ExtResource("16_38707")
